# video-to-ascii-mrd

./: .gitignore  FLOW_DIAGRAM.md  IMPLEMENTATION_SUMMARY.md  LOOPING_BEHAVIOR.md  PLAYER_ENGINE.md  QUICKSTART.md  README.md  WIPE_TRANSITION_IMPLEMENTATION.md  migrate.py  player_example.py  pyproject.toml  setup.py
video_to_ascii-1.3.0/: PKG-INFO
video_to_ascii/render_strategy/: ascii_strategy.py  distance.py
