[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video_to_ascii"
version = "1.3.0"
description = "It is a simple python package to play videos in the terminal"
readme = "README.md"
authors = [
    {name = "Joel Ibaceta", email = "mail@joelibaceta.com"},
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["video", "ascii", "terminal", "opencv"]
dependencies = [
    "xtermcolor >= 1.3",
    "ffmpeg-python >= 0.2.0",
    "opencv-python >= 4.11.0.86",
]
requires-python = ">=3.6"

[project.optional-dependencies]
audio = [
  "pyaudio >= 0.2.14",
]

[project.urls]
Homepage = "https://github.com/joelibaceta/video-to-ascii"
Source = "https://github.com/joelibaceta/video-to-ascii"
Tracker = "https://github.com/joelibaceta/video-to-ascii/issues"

[project.scripts]
video-to-ascii = "video_to_ascii.cli:main"

[tool.setuptools]
packages = ["video_to_ascii"]
include-package-data = true
